@@ -1,3 +1,8 @@
+2007-07-18	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* networkconfig.h: Make the NFS server, remote filesystem, and
+	directory to look at configurable.
+
 2007-06-22	Joel Sherrill <joel.sherrill@OARcorp.com>
 
 	* Makefile: Remove netlink. It appeared to be a hacked copy of http.
